@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-17T08:11:47Z",
+  "timestamp" : "2024-05-18T08:10:27Z",
   "count_outdated" : 7666,
   "uniques_outdated" : 3323,
-  "count" : 7722,
-  "uniques" : 3369,
+  "count" : 7723,
+  "uniques" : 3370,
   "clones" : [
     {
       "timestamp": "2024-05-06T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2024-05-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
