@@ -1,5 +1,5 @@
 {
-  "count": 56,
+  "count": 57,
   "uniques": 36,
   "clones": [
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2024-05-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-18T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
